dnl Process this file with autoconf to produce a configure script.
AC_INIT(input.h)
AM_INIT_AUTOMAKE(treecc, 0.0.7)
AM_CONFIG_HEADER(config.h)

dnl Option to disable cygwin1.dll under Windows.
AC_ARG_ENABLE(cygwin,
[  --disable-cygwin        Disable cygwin1.dll under Windows],
[case "${enableval}" in
  yes) cygwin=true ;;
  no)  cygwin=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-cygwin) ;;
esac],[cygwin=true])
if test x$cygwin = xfalse ; then
  CFLAGS="$CFLAGS -mno-cygwin"
fi

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h strings.h stdlib.h stdarg.h varargs.h)
AC_CHECK_HEADERS(unistd.h sys/types.h sys/stat.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Check to see if we are using gcc or not.
AM_CONDITIONAL(USINGGCC, test x$GCC = xyes)

dnl Checks for library functions.
AC_CHECK_FUNCS(vfprintf strchr qsort vsnprintf _vsnprintf vsprintf)
AC_CHECK_FUNCS(memcmp memcpy access stat)

dnl Determine if we can compile the C++ example, which
dnl uses bison-specific yacc features.
AC_SUBST(EXPR_CPP)
if test "x$YACC" = "xbison -y" ; then
	EXPR_CPP=expr_cpp
fi

AC_OUTPUT([
Makefile
etc/Makefile
doc/Makefile
tests/Makefile
examples/Makefile])
