dnl Process this file with autoconf to produce a configure script.
AC_INIT(input.h)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(treecc, 0.3.6)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Turn off the cygwin library if building for Win32.
AC_MSG_CHECKING([if building for some Win32 platform])
case "$host" in
	*-*-mingw*|*-*-cygwin*)
		platform_win32=yes
		CC="gcc -mno-cygwin"
		;;
	*-*-mingw*)
		platform_win32=yes
		;;
	*)
		platform_win32=no
		;;
esac
AC_MSG_RESULT($platform_win32)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_YACC
AM_PROG_LEX

dnl Check for file extensions.
AC_EXEEXT
AC_OBJEXT

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h strings.h stdlib.h stdarg.h varargs.h)
AC_CHECK_HEADERS(unistd.h sys/types.h sys/stat.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Check to see if we are using gcc or not.
if test x$GCC = xyes ; then
	CFLAGS="$CFLAGS -Wall"
fi

dnl Checks for library functions.
AC_CHECK_FUNCS(vfprintf strchr qsort vsnprintf _vsnprintf vsprintf)
AC_CHECK_FUNCS(memcmp memcpy access stat)

dnl Determine if we can compile the C++ example, which
dnl uses bison-specific yacc features.
AC_SUBST(EXPR_CPP)
if test "x$YACC" = "xbison -y" ; then
	EXPR_CPP=expr_cpp
fi

AC_OUTPUT([
Makefile
etc/Makefile
doc/Makefile
tests/Makefile
examples/Makefile
treecc.spec])
