noinst_PROGRAMS = test_input test_parse test_output

test_input_SOURCES = test_input.c
test_input_LDADD = ../libtreecc.a

test_parse_SOURCES = test_parse.c
test_parse_LDADD = ../libtreecc.a

test_output_SOURCES = test_output.c
test_output_LDADD = ../libtreecc.a

TESTS = run_tests

AM_CFLAGS = -I$(srcdir)/..
